Fix image styles on Safari

--- a/src/styles/work.module.css
+++ b/src/styles/work.module.css
@@ -29,7 +29,7 @@
   /* min-width: 100px;
   max-width: 400px; */
   min-height: 200px;
-  height: 100%;
+  /* height: 100%; */
   width: 100%;
   position: relative;
   text-align: left;
